# enviro

./: .gitignore  README.md
c/pico/: .gitignore
c/pico/pico-test/: README.md
c/pico/pico-test/hello/: CMakeLists.txt  source.c
c/pico/pico-test/serialnumber/: CMakeLists.txt  README.md  source.c  source.h
micropython/pico/enviroplus/: .gitignore  README.md  main.py
micropython/pico/enviroplus/doc/readings/: 2024.06.10 18-56 sensors.txt  README.md
micropython/pico/enviroplus/lib/: enviro-v1.23.0-1-pimoroni-micropython.uf2  pimoroni-enviro-v1.22.2-micropython.uf2
micropython/pico/enviroplus/readings/: 2024.06.08 21-11 sensors.txt  2024.06.12 8-22 sensors.txt
micropython/pico/enviroplus/sensorcommunity/: README.md  secrets.py
micropython/pico/enviroplus/sensors/: README.md  main.py
micropython/pico/enviroplus/sensors/savetofile/: README.md
micropython/pico/enviroplus/sensors/sensorcommunity/: README.md  main.py
micropython/pico/enviroplus/sensorsave/: README.md  main.py
micropython/pico/enviroplus/webserver/: README.md  secrets.py  webserver.py
